@@ -1,2 +1,3 @@
 #!/bin/bash
-java -Djava.library.path=$PWD/lib -cp out/production/crash -XX:ErrorFile=src/demo5/hs_err_pid2372.log $* demo5.NativeDistance
+JAVA_HOME=/usr/java/jdk1.6.0_13
+$JAVA_HOME/bin/java -Xmx1g -Xms1g -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -cp out/production/crash demo5.ClientServer
